--- a/public/index.html
+++ b/public/index.html
@@ -33,6 +33,7 @@
 <body style="background-color: #1F1B24; color: white;">
   <noscript>You need to enable JavaScript to run this app.</noscript>
   <div id="root"></div>
+  <div id="cart"></div>
   <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
