--- a/public/index.html
+++ b/public/index.html
@@ -30,7 +30,7 @@
   <title>React App</title>
 </head>
 
-<body style="background-color: #1F1B24; color: white;">
+<body style="background-color: #121212; color: white;">
   <noscript>You need to enable JavaScript to run this app.</noscript>
   <div id="root"></div>
   <div id="cart"></div>
