--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap-dark-5@1.1.3/dist/css/bootstrap-nightfall.min.css" rel="stylesheet"
     media="(prefers-color-scheme: dark)">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=BricolageGrotesque">
-  <title>React App</title>
+  <title>goFood</title>
 </head>
 
 <body style="background-color: #121212; color: white;">
